--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-/*
-**
-** Copyright 2009, The Android Open Source Project
-**
-** Licensed under the Apache License, Version 2.0 (the "License"); 
-** you may not use this file except in compliance with the License. 
-** You may obtain a copy of the License at 
-**
-**     http://www.apache.org/licenses/LICENSE-2.0 
-**
-** Unless required by applicable law or agreed to in writing, software 
-** distributed under the License is distributed on an "AS IS" BASIS, 
-** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-** See the License for the specific language governing permissions and 
-** limitations under the License.
-*/
--->
-
+<!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.gl2jni">
-    <application
-            android:label="@string/gl2jni_activity">
-        <activity android:name="GL2JNIActivity"
-                android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            	android:launchMode="singleTask"
-            	android:configChanges="orientation|keyboardHidden">
+        package="com.android.gl2jni"
+        android:versionCode="1"
+        android:installLocation="preferExternal"
+        android:versionName="1.0">
+
+    <!-- This is the platform API where NativeActivity was introduced. -->
+    <uses-sdk android:minSdkVersion="9"
+        android:targetSdkVersion="14" />
+
+    <application android:label="@string/app_name" android:hasCode="false">
+
+        <activity android:name="android.app.NativeActivity"
+            	android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                android:label="@string/app_name"
+               	android:screenOrientation="landscape"
+                android:configChanges="keyboardHidden">
+            
+            <!-- Tell NativeActivity the name of or .so -->
+            <meta-data android:name="android.app.lib_name"
+                    android:value="native-activity" />
+           
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-    <uses-feature android:glEsVersion="0x00020000"/>
-    <uses-sdk android:minSdkVersion="5"/>
-</manifest>
+
+</manifest> 
+<!-- END_INCLUDE(manifest) -->
