--- a/assets/GLDemo.cfg
+++ b/assets/GLDemo.cfg
@@ -7,4 +7,7 @@ FRAGMENT_SHADER_EXT	= .fsh
 # Shaders path inside assets 
 SHADERS_PATH		= shaders/
 
+# Scenes path inside assets
+SCENES_PATH			= scenes/
+SCENES_DESCRIPTOR	= scenes.sd
 
